libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-generic-relative-path.jsonc
//@ run: fail
//@ description: A relative path in generic position should be rejected
[
  "::kernel::special_form::type",
  "Foo<foo::Bar>",
  //~^ ERROR expected a simple type parameter
  { "#struct": { "foo": "Integer" } },
  "_"
]
